# Lantern

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  DEV_LOG.md  EXTENSIONS.md  LICENSE  MOBILE_PLAN.md  PLAN_SCHEDULE.md  PRD.md  PRODUCT.md  PROGRESS.md  README.md  TECH_SPEC.md  lantern-demo.html  package.json  tsconfig.app.json
shijie/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.lite.json
shijie/src-tauri/.cargo/: config.toml
shijie/src-tauri/capabilities/: default.json
shijie/src-tauri/icons/: icon.icns
shijie/src-tauri/src/: lib.rs  main.rs
shijie/src-tauri/src/ai/: client.rs  context.rs  guide.rs  mod.rs  prompts.rs  router.rs  tool_executor.rs  tools.rs
shijie/src-tauri/src/ai/tool_executor/: aihot.rs  contact.rs  date_utils.rs  glow.rs  guide.rs  habit.rs  journal.rs  memory.rs  mod.rs  pomodoro.rs  schedule.rs  shared.rs  skill.rs  task.rs
shijie/src-tauri/src/commands/: ai_commands.rs  ai_tool_helper.rs  aihot_commands.rs  config_commands.rs  contact_commands.rs  favorite_commands.rs  glow_ledger_commands.rs  habit_commands.rs  journal_commands.rs  mod.rs  pomodoro_commands.rs  schedule_commands.rs  skill_commands.rs  sync_commands.rs  task_commands.rs  wish_commands.rs
shijie/src-tauri/src/db/: connection.rs  migrations.rs
shijie/src-tauri/src/db/repositories/: ai_repo.rs  calendar_repo.rs  contact_repo.rs  favorite_repo.rs  glow_ledger_repo.rs  habit_repo.rs  journal_repo.rs  memory_repo.rs  mod.rs  pomodoro_repo.rs  schedule_repo.rs  setting_repo.rs  skill_repo.rs  task_repo.rs  (+1 more)
shijie/src-tauri/src/sync/: journal_sync.rs  mod.rs  oss_client.rs  remote_storage.rs  snapshot.rs  sync_engine.rs  webdav_client.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: client.rs  prompts.rs  tool_executor.rs  tools.rs
src-tauri/src/commands/: ai_commands.rs  calendar_commands.rs  config_commands.rs  favorite_commands.rs  memory_commands.rs  mod.rs  schedule_commands.rs  task_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/db/repositories/: ai_repo.rs  calendar_repo.rs  mod.rs  schedule_repo.rs
(+280 files in other folders)
