[package]
name = "lantern"
version = "2.5.0"
description = "提灯 - 拾级而上，提灯而行。A local-first AI-powered life management desktop app."
authors = ["鹏子"]
license = "MIT"
repository = "https://github.com/Abird64/-My-World"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lantern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-log"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [], optional = true }
tauri-plugin-log = { version = "2", optional = true }
rusqlite = { version = "0.35", features = ["bundled"] }
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
lunardate = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"
quick-xml = { version = "0.37", features = ["serialize"] }
async-trait = "0.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
